--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@prisma/client": "^5.15.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
     "next": "^14.2.4",
     "react": "^18",
@@ -21,6 +22,7 @@
     "reset-css": "^5.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
