--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:reset": "npx prisma db push --force-reset && npx prisma db seed",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -19,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "reset-css": "^5.0.2"
+    "reset-css": "^5.0.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -33,5 +35,8 @@
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+ "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
