--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.11.5",
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "framer-motion": "^11.2.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +27,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -36,7 +40,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
- "prisma": {
+  "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
