--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "reset-css": "^5.0.2",
+    "swr": "^2.2.5",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
